--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,24 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+.page-container {
+  display: grid;
+  grid-template-columns: 30% 40% 30%;
+  grid-template-rows: 20% 60% 20%;
+  height: 100vh;
+  
+}
+
+.form-container {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  border: thin solid lightgray;
+  padding-left: .8rem;
+  padding-right: .8rem;
+  border-radius: 15px;
+}
+
+.form {
+
+}
+
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
 }
